# TrialMatch_2026

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  evals.yml
backend/: Dockerfile  pyproject.toml
backend/evals/: dataset.json  run_evals.py
backend/evals/metrics/: criterion_accuracy.py  faithfulness.py  ranking_quality.py
backend/scripts/: run_demo.py  verify_nct07174336.py
backend/scripts/fixtures/: sample_trials.json
backend/tests/: conftest.py
backend/tests/fixtures/: sample_patients.json  sample_trials.json
backend/tests/integration/: test_api.py  test_graph_end_to_end.py
backend/tests/unit/: test_eligibility_parser.py  test_match_evaluator.py  test_models.py  test_profile_extractor.py  test_tools.py  test_trial_discovery.py
backend/trialmatch/: __init__.py  config.py  logging_config.py  main.py
backend/trialmatch/agents/: graph.py  state.py
backend/trialmatch/agents/nodes/: clarification_router.py  eligibility_parser.py  match_evaluator.py  profile_extractor.py  report_generator.py  trial_discovery.py
backend/trialmatch/agents/prompts/: eligibility_parsing.txt  match_evaluation.txt  profile_extraction.txt  report_generation.txt
backend/trialmatch/api/: dependencies.py  middleware.py
backend/trialmatch/api/routes/: health.py  match.py  trials.py
backend/trialmatch/data/: icd10_codes.csv
backend/trialmatch/guardrails/: grounding_check.py  output_framing.py  pii_filter.py
backend/trialmatch/models/: __init__.py  api.py  match.py  patient.py  trial.py
backend/trialmatch/observability/: cost_tracker.py  metrics.py  tracing.py
backend/trialmatch/tools/: clinicaltrials.py  icd10.py  pubmed.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  EVALUATION.md  PROJECT_PLAN.docx  PROMPTS.md
frontend/: .env.local.example  Dockerfile  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vitest.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ActivityFeed.tsx  ClarificationModal.tsx  ClinicalNoteInput.tsx  CriteriaTable.tsx  CriterionBreakdown.tsx  CriterionRow.tsx  ExportButtons.tsx  Footer.tsx  GlobalCriteriaView.tsx  Header.tsx  LlmStatsBar.tsx  MatchConfidenceBar.tsx  PatientForm.tsx  PipelineStepper.tsx  ProfileForm.tsx  ResultsCharts.tsx  ResultsOverview.tsx  ResultsView.tsx  ScoreRing.tsx  ThemeToggle.tsx  TrialAccordion.tsx  (+5 more)
frontend/tests/: CriteriaTable.test.tsx  ResultsOverview.test.tsx  TrialAccordion.test.tsx  api.test.ts  exportReport.test.ts  fixtures.ts  matchReducer.test.ts  profileSchema.test.ts  setup.ts  sse.test.ts  trialViews.test.ts
infrastructure/: fly.toml
infrastructure/scripts/: deploy.sh  seed_icd10.py
(+19 files in other folders)
