[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trialmatch"
version = "0.1.0"
description = "Multi-agent clinical trial eligibility matching system"
requires-python = ">=3.11"
dependencies = [
  "langchain>=0.3.0",
  "langchain-anthropic>=0.2.0",
  "langchain-openai>=0.2.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.100",
  "pydantic>=2.7",
  "pydantic-settings>=2.5",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "httpx>=0.27",
  "tenacity>=9.0",
  "python-dotenv>=1.0",
  "sse-starlette>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
