[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trialmatch"
version = "0.1.0"
description = "Multi-agent clinical trial eligibility matching system"
requires-python = ">=3.11"
# Version ranges reconciled with the actual installed/working set (2026-06).
# Floors track the installed major for packages that drifted past their old
# pins (the langchain/langgraph stack went 0.x -> 1.x; sse-starlette 2.x -> 3.x);
# every dependency is capped below the next major to stop a silent breaking
# upgrade like the one that prompted this. Only langgraph's public API is
# exercised by the code today (agents/graph.py); the rest are forward pins for
# the Week 2 LLM/API work.
dependencies = [
  "langchain>=1.3,<2",
  "langchain-anthropic>=1.4,<2",
  "langchain-openai>=1.2,<2",
  "langgraph>=1.2,<2",
  "langsmith>=0.8,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.5,<3",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "httpx>=0.27,<1",
  "tenacity>=9,<10",
  "python-dotenv>=1,<2",
  "sse-starlette>=3,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=1,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.15,<1",
  "mypy>=2,<3",
  "pre-commit>=3.8,<5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["trialmatch*"]
exclude = ["tests*", "evals*"]
